@@ -10,3 +10,4 @@ A - attack
 K - smoke
 D - defend
 B - ambush
+P - pause
