@@ -8,6 +8,7 @@ Quite a lot of basic engine stuff was done before this changelog was created. So
  - add order cancelling
  - add map scrolling
  - add some keyboard shortcuts
+ - add active pause
 
 25.11.2011:
  - fix group orders mixing their targets
